--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -691,3 +691,60 @@ h2#dataEnvio {
     color: #555;
     margin-bottom: 0;
 }
+
+.obra-card {
+    background: #f2f2f2;
+    padding: 12px;
+    margin: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.obra-card:hover {
+    background: #e0e0e0;
+}
+
+.obra-img-preview img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-right: 15px;
+}
+
+.obra-info h3 {
+    margin: 0;
+    font-size: 18px;
+}
+
+.obra-info p {
+    margin: 5px 0 0;
+    color: #666;
+}
+
+.container-main.expanded {
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    transition: 0.5s all ease;
+    margin: 40px auto;
+    gap: 100px;
+}
+
+.containerObra {
+    width: 90%;
+    max-width: 1200px;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+    border-radius: 8px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tarefasObra {
+    max-height: 70vh;
+    overflow-y: auto;
+}
