--- a/Revisao/style2.css
+++ b/Revisao/style2.css
@@ -700,7 +700,6 @@ img {
     text-align: center;
     font-weight: bold;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
-    margin: 10px auto;
 }
 
 h2#dataEnvio {
@@ -789,6 +788,7 @@ h2#dataEnvio {
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
+    margin-top: 50px;
 }
 
 p#data_aprovacao {
