--- a/Revisao/style2.css
+++ b/Revisao/style2.css
@@ -464,7 +464,8 @@ nav {
 }
  */
 
-.comment-number.highlight {
+.comment-number.highlight,
+.comment.highlight {
     background-color: #007bff;
     color: white;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -478,7 +479,6 @@ nav {
     transition: 0.3s all ease;
     color: white;
 }
-
 
 .comentarios {
     display: flex;
@@ -551,6 +551,11 @@ body::-webkit-scrollbar-track {
 
 .comment-body {
     margin-bottom: 8px;
+
+}
+
+p.comment-input:focus-visible {
+    outline: none;
 }
 
 .comment-footer {
