--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -464,7 +464,8 @@ nav {
 }
  */
 
-.comment-number.highlight {
+.comment-number.highlight,
+.comment.highlight {
     background-color: #007bff;
     color: white;
     transition: background-color 0.3s ease, color 0.3s ease;
