--- a/Revisao/style2.css
+++ b/Revisao/style2.css
@@ -480,6 +480,7 @@ nav {
     color: white;
 }
 
+
 .comentarios {
     display: flex;
     flex-direction: column;
@@ -551,11 +552,6 @@ body::-webkit-scrollbar-track {
 
 .comment-body {
     margin-bottom: 8px;
-
-}
-
-p.comment-input:focus-visible {
-    outline: none;
 }
 
 .comment-footer {
@@ -982,4 +978,69 @@ p.imagem_nome {
 .reply-icon {
     color: #00df30;
     transform: scaleX(-1);
+}
+
+.modal-actions {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.modal-actions button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s all ease;
+    font-size: 12px;
+    color: white;
+}
+
+.modal-actions button:hover {
+    opacity: 0.8;
+}
+
+#add-imagem {
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease-in-out;
+    text-align: center;
+}
+
+#add-imagem:hover {
+    background-color: #45a049;
+    transform: scale(1.1);
+}
+
+.preview-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 15px;
+    justify-content: center;
+}
+
+.preview-container img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+#btn-enviar-imagens {
+    margin: 0 auto;
+    display: flex;
+    background: green;
+    padding: 5px 8px;
+    border-radius: 15px;
+    font-size: 14px;
+    color: white;
 }
