--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -232,7 +232,6 @@ a {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
-    animation: fadeIn 0.3s ease;
 }
 
 .modal-content,
@@ -243,7 +242,7 @@ a {
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    animation: scale 0.2s;
+    animation: fadeIn 0.3s ease;
 }
 
 
@@ -273,7 +272,6 @@ a {
 #adicionar_acomp {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 15px;
 }
 
@@ -358,6 +356,8 @@ a {
     display: flex;
     align-items: center;
     gap: 10px;
+    flex-direction: column;
+
 }
 
 .obra-valores {
@@ -562,7 +562,7 @@ table {
     border-collapse: collapse;
 }
 
-table tbody tr:hover {
+table#tabela-obra tbody tr:hover {
     cursor: pointer;
     background-color: #FF5833;
 }
@@ -715,7 +715,7 @@ form#form-add {
     max-height: 80%;
     overflow-y: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    animation: showModal 0.3s ease;
+    animation: fadeIn 0.3s ease;
 }
 
 form#form-add .funcao {
@@ -1623,4 +1623,80 @@ button#deleteButton {
 
 #modal_pos {
     display: flex;
+}
+
+#calendarMini {
+    max-width: 400px;
+    margin: 20px;
+    cursor: pointer;
+}
+
+#calendarModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
+}
+
+#calendarContainer {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 800px;
+    width: 100%;
+}
+
+#eventForm {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+}
+
+/* Altera o fundo apenas do conteúdo do dia no hover */
+#calendarMini .fc-daygrid-day:hover {
+    background-color: #cecece;
+}
+
+.fc-h-event {
+    border: none;
+}
+
+.fc .fc-toolbar-title {
+    font-size: 1rem;
+    margin: 0px;
+}
+
+#eventForm .buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+#eventForm .buttons button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px 8px;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+#eventModal h3 {
+    text-align: center;
+    margin-bottom: 10px;
 }
