--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -41,7 +41,7 @@ header {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 #menu {
@@ -758,6 +758,101 @@ table#tabela-follow {
     background-color: #ff9d00;
 }
 
+
+#form-inserir {
+    padding: 10px;
+    font-family: 'Arial', sans-serif;
+}
+
+#form-inserir h2 {
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    margin-bottom: 40px;
+}
+
+#form-inserir form {
+    display: flex;
+    flex-direction: column;
+}
+
+#form-inserir div {
+    margin-bottom: 15px;
+}
+
+#form-inserir label {
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 5px;
+    display: block;
+}
+
+#form-inserir input[type="text"],
+#form-inserir input[type="date"],
+#form-inserir textarea,
+#form-inserir select {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    transition: border-color 0.3s;
+}
+
+#form-inserir input[type="text"]:focus,
+#form-inserir input[type="date"]:focus,
+#form-inserir textarea:focus,
+#form-inserir select:focus {
+    border-color: #007bff;
+    outline: none;
+}
+
+#form-inserir textarea {
+    resize: vertical;
+}
+
+#form-inserir button {
+    background-color: #00ff37;
+    color: black;
+    padding: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#form-inserir button:hover {
+    background-color: #0056b3;
+}
+
+button#deleteButton {
+    background-color: #ff0000;
+    color: white;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: black;
+}
+
 #filtro-obra,
 #filtro-colab,
 #follow-up {
@@ -767,6 +862,29 @@ table#tabela-follow {
     align-items: center;
     gap: 15px;
     padding: 50px;
+}
+
+#modal_pos,
+#editImagesModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal-content,
+.modal-content-images {
+    position: relative;
+    margin: 10% auto;
+    padding: 20px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    animation: fadeIn 0.3s ease;
 }
 
 .modal-edit {
@@ -1143,4 +1261,9 @@ input[type="checkbox"] {
 
 .log-button:hover {
     cursor: pointer;
+}
+
+
+#modal_pos {
+    display: flex;
 }
