feat: Update event fetching in getEventos.php, enhance render modal in scriptObra.js, and improve styling in styleObra.css and style.css

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -504,7 +504,8 @@ a {
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    margin-right: 370px;
+    max-width: 20%;
+    flex-wrap: wrap;
 
 }
 
