--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1650,9 +1650,15 @@ button#deleteButton {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    max-width: 800px;
+    max-width: 70vw;
     width: 100%;
+    max-height: 80vh;
+    overflow: auto;
 }
+
+#calendarFull .fc-toolbar-title {
+    font-size: 1.5rem;
+} 
 
 #eventForm {
     display: flex;
