fix: prazos tirados da tela de obra e botão de adicionar imagem na tela de revisao da imagem

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -999,3 +999,49 @@ p.imagem_nome {
 .modal-actions button:hover {
     opacity: 0.8;
 }
+
+
+#add-imagem {
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease-in-out;
+    text-align: center;
+}
+
+#add-imagem:hover {
+    background-color: #45a049;
+    transform: scale(1.1);
+}
+
+.preview-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 15px;
+    justify-content: center;
+}
+
+.preview-container img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+#btn-enviar-imagens {
+    margin: 0 auto;
+    display: flex;
+    background: green;
+    padding: 5px 8px;
+    border-radius: 15px;
+    font-size: 14px;
+    color: white;
+}
