--- a/css/styleAnimacao.css
+++ b/css/styleAnimacao.css
@@ -1,11 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: "Nunito", sans-serif;
+    font-family: "Open Sans", sans-serif;
+}
+
+
+body {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+}
+
+.container {
+    grid-column: 2;
 }
 
 button,
@@ -22,8 +30,7 @@ header {
     align-items: flex-start;
     padding: 2rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.623);
-	background: linear-gradient(90deg, #1a1a2e 0%, #3e4a70 50%, #2b2b3b 100%);
-    color: white;
+    color: black;
 }
 
 header button#voltar {
@@ -41,7 +48,7 @@ header button#voltar:hover {
     background-color: #ff0000c0;
 }
 
-header button#openModalBtn {
+button#openModalBtn {
     padding: 8px;
     background-color: #00ff15;
     border: 1px solid black;
@@ -50,7 +57,7 @@ header button#openModalBtn {
     color: #000;
 }
 
-header button#add_imagem {
+button#add_imagem {
     padding: 8px;
     background-color: #ffd900;
     border: 1px solid black;
