--- a/GANTT/style.css
+++ b/GANTT/style.css
@@ -38,21 +38,14 @@ table#gantt td {
 }
 
 
-table#gantt td:nth-child(2) {
-    text-align: left;
-    max-width: 100px;
-}
-
-table#gantt th:nth-child(2) {
-    resize: horizontal;
-    max-width: max-content;
-}
-
 table#gantt th {
     background-color: #f4f4f4;
     font-weight: bold;
 }
 
+td {
+    padding: 10px 0;
+}
 
 /* Estilos específicos para cada tipo de imagem */
 .posproducao {
@@ -60,6 +53,7 @@ table#gantt th {
     /* Azul claro */
     color: #0d47a1;
     /* Azul escuro */
+    border: 1px solid !important;
 }
 
 .finalizacao {
@@ -67,6 +61,7 @@ table#gantt th {
     /* Verde claro */
     color: #1b5e20;
     /* Verde escuro */
+    border: 1px solid !important;
 }
 
 .modelagem {
@@ -74,6 +69,7 @@ table#gantt th {
     /* Laranja claro */
     color: #bf360c;
     /* Laranja escuro */
+    border: 1px solid !important;
 }
 
 .caderno {
@@ -81,6 +77,7 @@ table#gantt th {
     /* Rosa claro */
     color: #880e4f;
     /* Rosa escuro */
+    border: 1px solid !important;
 }
 
 .composicao {
@@ -88,4 +85,31 @@ table#gantt th {
     /* Verde claro */
     color: #596112;
     /* Verde escuro*/
+    border: 1px solid !important;
+}
+
+.plantahumanizada {
+    background-color: #d0edf5;
+    color: rgb(0, 4, 255);
+    border: 1px solid !important;
+}
+
+#colaboradorModal {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    z-index: 999;
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    transition: opacity 0.3s ease;
+}
+
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    min-width: 300px;
 }
