--- a/GANTT/style.css
+++ b/GANTT/style.css
@@ -35,12 +35,15 @@ table#gantt td {
     text-overflow: ellipsis;
     white-space: nowrap;
     max-width: 10px;
+    user-select: none;
 }
 
 
 table#gantt th {
     background-color: #f4f4f4;
     font-weight: bold;
+        border: 1px solid #000000;
+
 }
 
 td {
@@ -112,4 +115,11 @@ td {
     padding: 20px;
     border-radius: 8px;
     min-width: 300px;
+}
+
+.arrastando {
+    background-color: #e6f7ff !important;
+    transition: transform 0.1s ease;
+    position: relative;
+    z-index: 5;
 }
