--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1658,7 +1658,7 @@ button#deleteButton {
 
 #calendarFull .fc-toolbar-title {
     font-size: 1.5rem;
-} 
+}
 
 #eventForm {
     display: flex;
@@ -1747,4 +1747,35 @@ button#deleteButton {
     padding: 20px;
     border-radius: 8px;
     width: 20%;
+}
+
+
+#loadingBar {
+    width: 100%;
+    height: 5px;
+    background-color: #eee;
+    position: relative;
+    margin-top: 10px;
+    overflow: hidden;
+}
+
+.progress {
+    height: 100%;
+    width: 0;
+    background-color: #3498db;
+    animation: loading 2s linear infinite;
+}
+
+@keyframes loading {
+    0% {
+        width: 0%;
+    }
+
+    50% {
+        width: 70%;
+    }
+
+    100% {
+        width: 100%;
+    }
 }
