--- a/GANTT/style.css
+++ b/GANTT/style.css
@@ -20,15 +20,15 @@ h2 {
 }
 
 /* Estilo geral para a tabela */
-table#gantt {
+table {
     border-collapse: collapse;
     width: 95%;
     font-size: 12px;
     margin: 20px auto;
 }
 
-table#gantt th,
-table#gantt td {
+table th,
+table td {
     border: 1px solid #ddd;
     text-align: center;
     overflow: hidden;
@@ -39,7 +39,7 @@ table#gantt td {
 }
 
 
-table#gantt th {
+table th {
     font-weight: bold;
     border: 1px solid #000000;
 
@@ -281,6 +281,7 @@ th.selecionado {
 
 th:not(.nome_imagem_header):not(.nomenclatura_header) {
     max-width: 40px;
+    min-width: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
