Update obra_id to 55 in simular_gantt.php and simular_gantt2.php; modify SQL insert statement in atribuir_colaborador.php; add status_imagens and funcoes retrieval in teste.php; enhance styles in style.css; include sidebar in teste.php.

--- a/GANTT/style.css
+++ b/GANTT/style.css
@@ -114,6 +114,10 @@ td {
     background-color: #ffff30;
 }
 
+.fim-de-semana {
+    background-color: #ff6663;
+    border: none;
+}
 
 #colaboradorModal {
     display: none;
