--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -663,3 +663,70 @@ h1 {
     position: relative;
     font-size: 14px;
 }
+
+
+#btn-ir-revisao {
+    padding: 3px 5px;
+    background-color: #2e468b;
+    border-radius: 10px;
+    font-size: 12px;
+    color: white;
+}
+
+.popover {
+    position: fixed;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    width: 300px;
+    font-size: 14px;
+}
+
+.popover::before {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 20px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: white transparent transparent transparent;
+}
+
+.secao {
+    margin-bottom: 15px;
+}
+
+.secao-titulo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    color: black;
+}
+
+.secao-conteudo {
+    padding: 6px 10px;
+    margin-top: 5px;
+    color: black;
+}
+
+
+.badge,
+.badge-interna {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    margin-left: 6px;
+}
+
+.oculto {
+    display: none;
+}
