refactor: update filtroFuncao styles and clear notification message when none available

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -35,6 +35,10 @@ a {
 
 #filtroFuncao {
     margin: 15px auto;
+    margin: 15px auto;
+    padding: 5px;
+    border: none;
+    border-bottom: 1px solid;
 }
 
 .main,
