refactor: update SQL query to use correct collaborator ID and improve response handling in remover_e_alocar.php; add transparent color to filter label in stylePos.css

--- a/css/stylePos.css
+++ b/css/stylePos.css
@@ -118,6 +118,9 @@ header button#openModalBtnRender {
     margin-bottom: 20px;
 }
 
+#tabela-imagens_filter label {
+    color: transparent;
+}
 
 .tabela-container {
     margin: 0 20px;
